# qmlskeleton

./: CMakeLists.txt  main.cpp  main.qml
Stuff/: MyMaterial.qml  x.frag
